--- a/_posts/2023-11-09-github-블로그-만들기-1.md
+++ b/_posts/2023-11-09-github-블로그-만들기-1.md
@@ -1,14 +1,19 @@
 ---
 layout: post
-title: Github 블로그 만들기 1
+title: Github 블로그 만들기_1
 date: "2023-11-09 17:18:54 +0900"
+category: [Github]
+tags: [jekyll]
 ---
 
 # Github 블로그를 만들어보자.
 
 예전부터 개발 관련 블로그를 만드려고 했으나, 귀찮아서 미루고 미루다보니 더이상 안돼겠다.
+
 뭐라도 후딱 만들어놔야 쓰던말던 할 것 같아서, 시작하는 github 블로그
+
 뭐 velog가 tistory다 다양한 블로그들이 있지만, 그냥 익숙하고 무료인 github를 사용하기로 했다.
+
 다음에 시간이 있으면 다른 블로그들은 뭐가 다른지 보는 것으로...
 
 ## 환경 설정
@@ -17,31 +22,75 @@ Github 블로그를 사용하기 위해서 구글링을 하다보니 Ruby(jekyll
 
 ### Ruby
 
-> 루비(영어: Ruby)는 마쓰모토 유키히로가 개발한 동적 객체 지향 스크립트 프로그래밍 언어이다.
-> 루비는 순수 객체 지향 언어라, 정수나 문자열 등을 포함한 데이터 형식 등 모든 것이 객체이다.
-> from [위키백과](<https://ko.wikipedia.org/wiki/%EB%A3%A8%EB%B9%84_(%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D_%EC%96%B8%EC%96%B4)>)
+> 루비(영어: Ruby)는 마쓰모토 유키히로가 개발한 동적 객체 지향 스크립트 프로그래밍 언어이다.<br>루비는 순수 객체 지향 언어라, 정수나 문자열 등을 포함한 데이터 형식 등 모든 것이 객체이다.<br>from [위키백과](<https://ko.wikipedia.org/wiki/%EB%A3%A8%EB%B9%84_(%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D_%EC%96%B8%EC%96%B4)>)
 
 나는 윈도우 노트북을 사용하고 있으므로, [윈도우 전용 인스톨러](https://rubyinstaller.org/downloads/)를 사용해 설치했다.
 주의) 설치 파일은 with devkit 항목의 설치파일로 받아서 설치하자.
 설치과정에서 따로 설정한 것은 없고 기본 옵션으로만 진행했다.
 설치 과정의 마지막에 [MSYS2 toolchain](https://www.msys2.org/) 설치를 위한 커맨드창이 뜨는데, 요것도 그냥 엔터만 쳐서 넘기면서 설치하면 된다.
 
+<br>
+
 ### Jekyll, Bundler
 
 #### Jekyll
 
-> 지킬(Jekyll)은 정적 사이트 생성기이다. 깃허브의 공동 설립자 톰 프레스턴 워너에 의해 루비 프로그래밍 언어로 개발했으며 오픈 소스 MIT 허가서로 배포된다.
-> from [위키백과](<https://ko.wikipedia.org/wiki/%EC%A7%80%ED%82%AC_(%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4)>)
+> 지킬(Jekyll)은 정적 사이트 생성기이다. 깃허브의 공동 설립자 톰 프레스턴 워너에 의해 루비 프로그래밍 언어로 개발했으며 오픈 소스 MIT 허가서로 배포된다.<br>from [위키백과](<https://ko.wikipedia.org/wiki/%EC%A7%80%ED%82%AC_(%EC%86%8C%ED%94%84%ED%8A%B8%EC%9B%A8%EC%96%B4)>)
 
-Ruby를 사용해 만들어진 Jekyll을 설치해서, 실제 블로그를 구성할 수 있다. 블로그의 새로운 테마를 내가 직접 만들수도 있겠지만, 그건 나중에 하도록 하고 일단 블로그를 만드는게 우선이니 테마는 오픈소스를 사용하도록 하자.
+Ruby를 사용해 만들어진 Jekyll을 설치해서, 실제 블로그를 구성할 수 있다.
+
+블로그의 새로운 테마를 내가 직접 만들수도 있겠지만, 그건 나중에 하도록 하고 일단 블로그를 만드는게 우선이니 테마는 오픈소스를 사용하도록 하자.
 
 #### Bundler
 
-> Bundler provides a consistent environment for Ruby projects by tracking and installing the exact gems and versions that are needed.
-> Bundler is an exit from dependency hell, and ensures that the gems you need are present in development, staging, and production. Starting work on a project is as simple as `bundle install`.
-> from bundler.io
+> Bundler provides a consistent environment for Ruby projects by tracking and installing the exact gems and versions that are needed.<br>Bundler is an exit from dependency hell, and ensures that the gems you need are present in development, staging, and production. Starting work on a project is as simple as `bundle install`.<br>from bundler.io
 
-간단하게 살펴보니, ruby 프로젝트에 사용하는 패키지(gem)들을 한번에 설치해주는 역할을 하는 것 같다.
-나는 하도 node.js만 사용하다보니, 대충 npm의 역할을 한다고 생각이 든다.
+간단하게 살펴보니, ruby 프로젝트에 사용하는 패키지들을 한번에 설치해주는 역할을 하는 것 같다.
+
 Ruby 프로젝트에 사용하는 의존성들은 프로젝트 루트에 있는 `Gemfile`에 명시되어있는듯 하다.
+
 이 파일의 의존성을 보고 설치를 진행해주는 것 같다.
+
+#### 설치 진행
+
+설치에 필요한 Ruby 패키지는 `gem install` 명령어를 통해 설치가 가능하다.
+
+```ruby
+gem install jekyll bundler
+```
+
+---
+
+## 사이트 생성
+
+블로그를 구성할 사이트를 생성할 때, **Jekyll**에서 제공하는 기본 템플릿을 생성할 수 있고, 혹은 이미 만들어져 있는 오픈소스 템플릿을 가져와서 사용할 수 있다.
+
+나는 위에서 명시한대로 그냥 오픈소스를 가져와서 사용하기로 했다. 내가 사용할 템플릿은 [Chirpy](https://github.com/cotes2020/jekyll-theme-chirpy) 템플릿이다.
+
+### 기본 템플릿 생성법
+
+**Jekyll**을 사용해서 기본적인 블로그 사이트를 생성할 수 있다. 사이트를 저장할 디렉토리를 생성 후 그곳에 명령어를 실행하자.
+
+```ruby
+jekyll new PATH
+```
+
+<br>
+
+명령어에 대한 기본적인 사용법은 [링크](https://jekyllrb-ko.github.io/docs/usage/)를 참조
+
+### Chirpy 템플릿 생성법
+
+[Chirpy starter 레포](https://github.com/cotes2020/chirpy-starter)를 사용한다.(Use this template -> Create a new repository)
+
+생성할 레포의 이름은 `본인깃헙계정.github.io` 로 설정하자.
+
+그 후 생성된 레포를 `git clone` 해서 가져온 후, 루트 디렉토리에서 `bundle` 명령어를 통해 의존성 패키지들을 설치한다.
+
+---
+
+## 정리
+
+이번 포스트에서는 깃헙 블로그를 만들기 위한 첫번째 단계인 환경설정과 템플릿 생성에 대해서 살펴보았다.
+
+다음에는 블로그 설정을 위한 configuration과 deploy에 대해서 알아보자.
