--- a/_posts/2023-11-10-github-블로그-만들기-2.md
+++ b/_posts/2023-11-10-github-블로그-만들기-2.md
@@ -64,11 +64,11 @@ bundle exec jekyll s
 배포를 위해서는 레포를 `public`으로 설정해놔야 하고, `Github Actions`를 사용해 배포해야한다.
 
 1. Github 레포로 들어간 후, `Settings` 탭으로 들어간다.
-   ![깃헙메뉴](/assets/img/captures/capture1.png)
+   ![깃헙메뉴](/assets/img/captures/capture1.png){: width="650"}
 2. 사이드바의 `Pages` 탭으로 들어간다.
-   ![사이드바](/assets/img/captures/capture2.png)
+   ![사이드바](/assets/img/captures/capture2.png){: width="200"}
 3. `Build and Deployment` 를 찾아간 후, `Source` 항목의 값을 `Github Actions` 로 변경한다.
-   ![옵션설정](/assets/img/captures/capture3.png)
+   ![옵션설정](/assets/img/captures/capture3.png){: width="250"}
 
 이제부터는 `github계정.github.io` 주소를 이용해 접속이 가능하고, 변경사항을 커밋하면 변경사항이 바로 빌드돼서 적용된다.
 
