--- a/_posts/2023-11-10-chirpy-작성-팁.md
+++ b/_posts/2023-11-10-chirpy-작성-팁.md
@@ -72,16 +72,16 @@ Moon
 ## Prompts
 
 > An example showing the `tip` type prompt.
-> {: .prompt-tip }
+{: .prompt-tip }
 
 > An example showing the `info` type prompt.
-> {: .prompt-info }
+{: .prompt-info }
 
 > An example showing the `warning` type prompt.
-> {: .prompt-warning }
+{: .prompt-warning }
 
 > An example showing the `danger` type prompt.
-> {: .prompt-danger }
+{: .prompt-danger }
 
 ## Tables
 
@@ -180,7 +180,7 @@ Praesent maximus aliquam sapien. Sed vel neque in dolor pulvinar auctor. Maecena
 The image below will toggle dark/light mode based on theme preference, notice it has shadows.
 
 ![light mode only](https://chirpy-img.netlify.app/posts/20190808/devtools-light.png){: .light .w-75 .shadow .rounded-10 w='1212' h='668' }
-![dark mode only](https://chirpy-img.netlify.app/posts/20190808/devtools-light.png){: .dark .w-75 .shadow .rounded-10 w='1212' h='668' }
+![dark mode only](https://chirpy-img.netlify.app/posts/20190808/devtools-dark.png){: .dark .w-75 .shadow .rounded-10 w='1212' h='668' }
 
 ## Video
 
