--- a/_posts/2023-11-10-github-블로그-만들기-3.md
+++ b/_posts/2023-11-10-github-블로그-만들기-3.md
@@ -48,7 +48,7 @@ tags: [태그1, 태그2, ...]
 
 블로그 프로젝트의 루트의 `Gemfile`에 아래 라인을 추가한다.
 
-```gemfile
+```bash
 gem 'jekyll-compose', group: [:jekyll_plugins]
 ```
 
@@ -56,7 +56,10 @@ gem 'jekyll-compose', group: [:jekyll_plugins]
 
 ### 간단한 커맨드
 
-- 도움말 : `bundle exec jekyll help`
-- 포스트 생성 : `bundle exec jekyll post "포스트 제목" --timestamp-format "%Y-%m-%d %H:%M:%S %z"`
+도움말
+: `bundle exec jekyll help`
+
+포스트 생성
+: `bundle exec jekyll post "포스트 제목" --timestamp-format "%Y-%m-%d %H:%M:%S %z"`
 
 포스트를 생성하면 자동으로 \_posts 디렉토리에 마크다운 파일이 생성된다.
