update post, css - update new post - update sidebar css

--- a/_posts/2023-11-10-github-블로그-만들기-2.md
+++ b/_posts/2023-11-10-github-블로그-만들기-2.md
@@ -3,7 +3,7 @@ layout: post
 title: Github 블로그 만들기_2
 date: "2023-11-10 12:34:14 +0900"
 category: [Github]
-tags: [jekyll]
+tags: [jekyll, chirpy]
 ---
 
 # Github 블로그 설정을 해보자.
