--- a/_posts/2023-11-10-github-블로그-만들기-3.md
+++ b/_posts/2023-11-10-github-블로그-만들기-3.md
@@ -3,12 +3,14 @@ layout: post
 title: Github 블로그 만들기_3
 date: "2023-11-10 14:16:53 +0900"
 category: [Github]
-tags: [jekyll]
+tags: [jekyll, chirpy]
 ---
 
 # 블로그 포스트를 생성해보자.
 
 Jekyll로 만든 블로그에서 포스트를 만들수 있는 방법을 알아보자.
+
+---
 
 ## 포스트 생성법(기본)
 
@@ -40,6 +42,8 @@ tags: [태그1, 태그2, ...]
 
 본문은 전형적인 마크다운 형태로 작성하면 된다. 마크다운 문법은 따로 알아보면 된다. 깔끔한 문서 정리가 가능하니 모른다면 알아두자.
 
+---
+
 ## 포스트 생성법(Jekyll-Compose)
 
 포스트의 파일명 지정이나, Front Matter 설정등 매번 번거로운 과정을 반복하기 싫다면, [Jekyll_Compose](https://github.com/jekyll/jekyll-compose)를 사용하자.
@@ -63,3 +67,13 @@ gem 'jekyll-compose', group: [:jekyll_plugins]
 : `bundle exec jekyll post "포스트 제목" --timestamp-format "%Y-%m-%d %H:%M:%S %z"`
 
 포스트를 생성하면 자동으로 \_posts 디렉토리에 마크다운 파일이 생성된다.
+
+### 포스트 내용 작성
+기본적인 방법으로 포스트를 만들던, Jekyll-Compose를 사용하던, 포스트의 구조는 똑같다.
+
+다만 편의성에 차이가 있는 것이므로, 포스트의 내용은 자동생성된 Front Matter 다음에 작성해주면 된다.
+
+## 정리
+이번에는 포스트 생성법과 내용 작성에 대해서 알아보았다.
+
+다음에는 포스트의 댓글기능과 블로그 CSS 커스터마이징에 대해 알아보자.
