--- a/_posts/2023-11-09-github-블로그-만들기-1.md
+++ b/_posts/2023-11-09-github-블로그-만들기-1.md
@@ -8,7 +8,7 @@ tags: [jekyll, chirpy]
 
 # Github 블로그를 만들어보자.
 
-예전부터 개발 관련 블로그를 만드려고 했으나, 귀찮아서 미루고 미루다보니 더이상 안돼겠다.
+예전부터 개발 관련 블로그를 만드려고 했으나, 귀찮아서 미루고 미루다보니 더이상 안되겠다.
 
 뭐라도 후딱 만들어놔야 쓰던말던 할 것 같아서, 시작하는 github 블로그
 
@@ -16,9 +16,11 @@ tags: [jekyll, chirpy]
 
 다음에 시간이 있으면 다른 블로그들은 뭐가 다른지 보는 것으로...
 
-## 환경 설정
+---
 
-Github 블로그를 사용하기 위해서 구글링을 하다보니 Ruby(jekyll, bundler)를 사용하더라...
+## 1. 환경 설정
+
+Github 블로그를 사용하기 위해서 구글링을 하다보니 Github Pages는 정적 웹사이트 프로젝트이고, Jekyll(Ruby 언어의 패키지)을 사용한 블로그가 거의 정석이더라...
 
 ### Ruby
 
@@ -64,7 +66,7 @@ gem install jekyll bundler
 
 ---
 
-## 사이트 생성
+## 2. 사이트 생성
 
 블로그를 구성할 사이트를 생성할 때, **Jekyll**에서 제공하는 기본 템플릿을 생성할 수 있고, 혹은 이미 만들어져 있는 오픈소스 템플릿을 가져와서 사용할 수 있다.
 
