update post, css - update bg, button bg - update new post

--- a/_posts/2023-11-21-포트폴리오-개발-기록-1.md
+++ b/_posts/2023-11-21-포트폴리오-개발-기록-1.md
@@ -2,6 +2,7 @@
 layout: post
 title: 포트폴리오 개발 기록 1
 date: '2023-11-21 17:28:14 +0900'
+category: [자기계발]
 ---
 
 # 포트폴리오를 만들어보자
@@ -21,3 +22,14 @@ date: '2023-11-21 17:28:14 +0900'
 게임형태로 사용자와 인터랙션을 통해, 나에대한 정보를 살펴볼 수 있도록 만들어보자.
 
 화려한 포트폴리오들은 대부분 `three.js` 를 사용하더라. 나도한번 볼까?
+
+---
+
+## 계획 변경
+아무래도 포트폴리오에 올릴 건덕지가 좀 필요해서, 패키지를 하나 개발해보려고 한다.
+
+요즘 markdown을 쓰다보니, 원하는 기능이 하나 있어서 만들어보려고 한다.
+
+markdown parser 역할도 하면서, header에 따라 그룹핑을 해주는 기능을 만들어보자.
+
+다음 포스트에서 계속
