update post - fix ssh key issue

--- a/_posts/2023-11-29-npm-패키지-제작기-2.md
+++ b/_posts/2023-11-29-npm-패키지-제작기-2.md
@@ -29,6 +29,15 @@ git push -u origin main
 > 해당 내용은 포스트 [github 계정 ssh key 설정](/posts/github-계정-ssh-key-설정/) 참조
 {: .prompt-danger }
 
+> 알고보니 ssh 문제보단 뭔가 public 레포 문제인가?
+>
+> You do not have permission to push to on Github. Would you like to create a fork and push to it instead? 요런 메시지
+>
+> 수많은 시도를 해보고 찾아낸 방법 : 이번에 계정에 설정한 ssh key 는 ed255뭐시기 알고리즘이었는데, 그냥 기존 key들 다 지우고, rsa key 새로 만들어서 계정에 등록하고 다시 시도해보았다.(`ssh-keygen -t rsa -b 4096 -C "your_email@example.com"`)
+>
+> 그랬더니 되네 ㅡ,.ㅡ 여러모로 열받는다.(windows credentials 에서 git 관련 다 지우고 vscode에서 다시 로그인하기는 함.)
+{: .prompt-danger }
+
 ## 2. `package.json` 파일 생성
 1. 프로젝트 폴더에서 `npm init` 실행
 - scoped modules : `npm init --scope=@scope-name`
