update post - update reference - update new post

--- a/_posts/2023-12-13-npm-패키지-제작기-4.md
+++ b/_posts/2023-12-13-npm-패키지-제작기-4.md
@@ -33,7 +33,7 @@ npm publish
 
 대부분 type 명시 파일은 `파일명.d.ts` 형태로 네이밍을 하고, 여기에 type을 명시한다.
 
-명시해야 할 내용은 모듈 파일(`cjs`, `mjs`)에 있는 export 에 사용되는 내용의 type이다.
+명시해야 할 내용은 모듈 파일(`cjs`, `mjs`)에 있는 export 에 사용되는 내용의 type이다.(사용자가 불러와서 사용할 수 있는 것들)
 
 예를 들어 다음과 같은 모듈이 있다고 가정하자.
 
@@ -66,6 +66,102 @@ declare function person(name: string, age?: number)
 {: file='/lib/main.d.ts'}
 
 ## cjs, esm
+모듈을 사용하거나 제공하는 방식을 알아야 내가 만들 모듈 내부에서도 다른 모듈을 불러와서 쓸 수 있고, 최종적으로는 사용자에게 제공할 수 있다.
+
+자바스크립트의 모듈에는 2가지 종류 CJS(Common JS Module), ESM(ECMA Script Module)이 있는데, 관련된 내용은 알아보고 포스트를 따로 게시해야겠다.
+
+간단하게 사용법만 말하자면
+
 cjs(common js)의 경우에는 `require` 와 `module.exports` 를 사용한다.
 
 esm(ECMA Script module)의 경우에는 `import` 와 `export` 를 사용한다.
+
+이를 더 쉽게 이해하기 위해, 간단한 예시를 들어보자.
+
+내가 만든 모듈의 함수 중 하나의 코드를 가져와서 알아보겠다.
+
+### CJS
+```js
+const {parse} = require("marked");
+const prettify = require("@liquify/prettify");
+
+/**
+ * parse Markdown Text to Grouped Html text.
+ * @param {string} markdownText text data written in markdown syntax
+ * @param {number} minLevel min level to start grouping
+ * @param {string} selector Selector that you want to use between id and class.(Possible values - All upper or lower cases of "class" and "id")
+ * @param {string} prefix prefix string of class or id.( "_" -> \<section class="_h1-1"> )
+ * @param {string} postfix postfix string of class or id.( "--" -> \<section class="_h1--1"> )
+ * @returns {string} html text data grouped by section tag
+ */
+exports.parseToGroup = (markdownText, minLevel=1, selector="id", prefix="_", postfix="-") => {
+    selector = selector.toLowerCase();
+    if(!["id", "class"].includes(selector.toLowerCase())) {
+        throw new Error(`"${selector}" is invalid name for a selector.`);
+    }
+
+    markdownText = encodeHeaderTag(markdownText);
+    const html = parse(markdownText);
+    const resultBeforeDecode = prettify.formatSync(findHeader(html, minLevel, 1, "", selector, prefix, postfix), {
+        language: 'html',
+        indentSize: 2
+      });
+    const result = prettify.formatSync(decodeHeaderTag(resultBeforeDecode), {
+        language: 'html',
+        indentSize: 2
+      });
+
+    return result;
+}
+```
+
+최상단 부분의 코드가 바로 사용할 모듈을 불러오는 코드이다. 보이는대로 require 함수를 사용해 필요한 모듈을 불러오고 있다.
+
+아래의 코드에서 `exports.parseToGroup` 이라는 곳에 함수를 선언했다.
+
+이는 `parseToGroup` 이라는 함수를 내가 사용자에게 제공하겠다 라는 뜻이다. CJS에서 `exports` 란 사용자에게 제공할 객체 그 자체로 생각하면 쉬울 것 같다.
+
+따라서 사용자 입장에서는 내가 제공한 함수를 아래와 같이 사용할 수 있다.
+
+```js
+const { parseToGroup } = require("모듈이름");
+
+parseToGroup(...)
+```
+
+### ESM
+```js
+import {parse} from "marked";
+import prettify from "@liquify/prettify";
+
+/**
+ * parse Markdown Text to Grouped Html text.
+ * @param {string} markdownText text data written in markdown syntax
+ * @param {number} minLevel min level to start grouping
+ * @param {string} selector Selector that you want to use between id and class.(Possible values - All upper or lower cases of "class" and "id")
+ * @param {string} prefix prefix string of class or id.( "_" -> \<section class="_h1-1"> )
+ * @param {string} postfix postfix string of class or id.( "--" -> \<section class="_h1--1"> )
+ * @returns {string} html text data grouped by section tag
+ */
+export const parseToGroup = (markdownText, minLevel=1, selector="id", prefix="_", postfix="-") => {
+    selector = selector.toLowerCase();
+    if(!["id", "class"].includes(selector.toLowerCase())) {
+        throw new Error(`"${selector}" is invalid name for a selector.`);
+    }
+
+    if(!markdownDoc) {
+        markdownDoc = new MarkdownDocument();
+    }
+
+    markdownDoc.setDocument(false, markdownText, minLevel, 1, "", selector, prefix, postfix);
+
+    return markdownDoc.html;
+}
+```
+
+CJS와 다른점은 내가 사용할 모듈을 불러올 때는 `import ~ from ~` 코드를 사용하고, 사용자에게 제공할 때는 `export` 키워드를 사용하고 뒤에 제공할 내용을 적어주면 된다. 특이한 점은 이 때 선언(declaration) 형식으로 적어주어야 한다는 점이다. `export const ~`, `export let ~`, `export function ~` 이런 식으로 말이다.
+
+---
+
+## 참조
+- https://toss.tech/article/commonjs-esm-exports-field
