--- a/_posts/2024-01-04-npm-패키지-제작기-5.md
+++ b/_posts/2024-01-04-npm-패키지-제작기-5.md
@@ -148,20 +148,24 @@ gulp.task("compressBIN", function() {
 
 위의 코드를 하나씩 살펴보자.
 
-1. `gulp.task(taskName, taskFunction)`
+#### 1. `gulp.task(taskName, taskFunction)`
+
 gulp에서는 자동화할 개발 과정을 `task` 라는 단위로 묶어서 사용한다.
 
 첫번째로 자동화할 로직의 이름을 지정하고, 실제로 실행될 로직을 return하는 함수를 지정해주면 된다.
 
-2. `gulp.src("소스파일의경로")`
+#### 2. `gulp.src("소스파일의경로")`
+
 `task`에서 사용할 소스 파일을 지정해주는 함수라고 생각하면 된다.
 
-3. `pipe(사용할 플러그인들)`
+#### 3. `pipe(사용할 플러그인들)`
+
 소스 파일에 적용하고 싶은 개발 과정들을 하나씩 pipe 함수를 사용해서 엮어주면 된다. 
 
 원하는 기능들에 해당하는 플러그인 모듈들을 설치하고 사용하는데, 나는 난독화를 위한 `gulp-uglify`, `gulp-javascript-obfuscator` 와 결과파일의 이름을 변경하기 위한 `gulp-rename` 을 사용했다.
 
-4. `gulp.dest("저장경로", 옵션)`
+#### 4. `gulp.dest("저장경로", 옵션)`
+
 마지막 pipe 에 개발 과정을 거친 결과를 저장할 경로를 지정하면 된다.
 
 설명이 되게 간단해서 좀 그렇긴 한데, 실제로도 어려운 과정이 따로 필요없는 좋은 모듈이기 때문인 것 같다.
@@ -181,5 +185,5 @@ gulp compressBIN
 ---
 
 ## 참조
-- https://www.happykoo.net/@happykoo/posts/56
-- https://www.npmjs.com/package/gulp
+- <https://www.happykoo.net/@happykoo/posts/56>{:target="_blank"}
+- <https://www.npmjs.com/package/gulp>{:target="_blank"}
