--- a/_posts/2024-01-04-npm-패키지-제작기-5.md
+++ b/_posts/2024-01-04-npm-패키지-제작기-5.md
@@ -3,7 +3,7 @@ layout: post
 title: npm 패키지 제작기 5
 date: '2024-01-04 16:23:31 +0900'
 category: [자기계발, npm]
-tags: [npm]
+tags: [npm, uglify, obfuscate]
 ---
 
 # 코드 난독화
