update post - update link - new post. cookie - samesite

--- a/_posts/2024-01-05-npm-패키지-제작기-6.md
+++ b/_posts/2024-01-05-npm-패키지-제작기-6.md
@@ -122,7 +122,7 @@ node ./bin/test.mjs test1 test2 test3
 ]
 ```
 
-첫 번째 요소는 바로 Node.js 실행 경로[`process.execPath`](https://nodejs.org/docs/latest/api/process.html#processexecpath) 이고, 두 번째 요소는 실행될 JavaScript 파일의 경로이다.
+첫 번째 요소는 바로 Node.js 실행 경로[`process.execPath`](https://nodejs.org/docs/latest/api/process.html#processexecpath){:target="_blank"} 이고, 두 번째 요소는 실행될 JavaScript 파일의 경로이다.
 
 그 뒤에 등장하는 나머지 요소들이 바로 사용자가 입력한 값들이다. 보다시피 공백(스페이스)를 기준으로 하나씩 요소가 추가된다.
 
@@ -193,7 +193,7 @@ CLI 모듈을 만드는 방법을 알아보긴 했으나, 사용자로부터 받
 
 없을리가 없다... 왠만한 모듈들은 이미 다 만들어져 있기 때문에, 우리는 검색만 잘 하면 된다.
 
-이쪽 계열에 가장 인기가 많은 모듈을 찾아보니, 바로 [`Commander.js`](https://www.npmjs.com/package/commander) 라는 모듈이 있었다.
+이쪽 계열에 가장 인기가 많은 모듈을 찾아보니, 바로 [`Commander.js`](https://www.npmjs.com/package/commander){:target="_blank"} 라는 모듈이 있었다.
 
 무려 주간 다운로드가 5900만;;
 
