--- a/_posts/2024-02-14-net-maui-알아보기-1장-환경-설치-프로젝트-구조.md
+++ b/_posts/2024-02-14-net-maui-알아보기-1장-환경-설치-프로젝트-구조.md
@@ -336,5 +336,5 @@ Mac 은 Mac 기기를 사용해서만 deploy 를 해야한다. 해당 문서를 
 ---
 
 ## Resources
-- .NET MAUI 도큐먼트 : https://learn.microsoft.com/ko-kr/dotnet/maui/?view=net-maui-8.0
-- 좋은 .NET MAUI 라이브러리, 리소스가 정리된 깃헙(awesome-dotnet-maui) : https://github.com/jsuarezruiz/awesome-dotnet-maui
+- .NET MAUI 도큐먼트 : <https://learn.microsoft.com/ko-kr/dotnet/maui/?view=net-maui-8.0>{:target="_blank"}
+- 좋은 .NET MAUI 라이브러리, 리소스가 정리된 깃헙(awesome-dotnet-maui) : <https://github.com/jsuarezruiz/awesome-dotnet-maui>{:target="_blank"}
