update css - code highlight - scrollbar color - table css
update post
- .NET MAUI : update image size and align

new post
- packet sniffing

--- a/_posts/2023-11-10-chirpy-마크다운-문법-작성-팁.md
+++ b/_posts/2023-11-10-chirpy-마크다운-문법-작성-팁.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Chirpy 마크다운 문법 작성 팁
+title: Chirpy 마크다운 문법 작성 팁(그 외 블로그 명령어)
 date: "2023-11-10 15:25:11 +0900"
 category: [Chirpy]
 tags: [chirpy]
@@ -379,6 +379,30 @@ The image below will toggle dark/light mode based on theme preference, notice it
 [^footnote]: The footnote source
 [^fn-nth-2]: The 2nd footnote source
 ```
+
+## 번외) 블로그 관련 명령어
+### 로컬 블로그 서버 실행
+```bash
+bundle exec jekyll s
+```
+
+### 새로운 포스트 만들기
+```bash
+bundle exec jekyll post "제목" --timestamp-format "%Y-%m-%d %H:%M:%S %z"
+```
+
+### 위 명령어들을 alias 등록 시 추가할 script
+`.bash_profile` 혹은 `.bash_rc` 에 추가
+
+```sh
+alias blog="bundle exec jekyll s"
+
+post() {
+        bundle exec jekyll post "$1" --timestamp-format "%Y-%m-%d %H:%M:%S %z"
+}
+```
+
+source 이후에 `blog` 명령어 실행 시 블로그 로컬 서버 실행, `post "제목"` 명령어 실행 시 새로운 포스트 생성.
 
 ---
 
