update post - 패킷 스니핑 2장

--- a/_posts/2024-02-16-패킷-스니핑-알아보기-2장-wireshark-사용하기.md
+++ b/_posts/2024-02-16-패킷-스니핑-알아보기-2장-wireshark-사용하기.md
@@ -45,3 +45,27 @@ Packet Detail
 
 Packet Bytes
 : 가공되지 않은 형태(Raw 형태)의 패킷을 보여준다.
+
+## 캡처 파일 작업
+### 저장, 내보내기(Export)
+파일 메뉴 - 저장 버튼을 통해 캡처한 패킷리스트를 그대로 저장할 수 있다. 저장된 파일의 기본 형식은 `.pcapng` 이다.
+
+파일 메뉴 - 지정한 패킷 내보내기 버튼을 사용하면 아래의 Packet Range 를 설정함으로써 지정한 구간의 패킷만 따로 저장할 수도 있다.
+
+와이어샤크에서 캡처한 패킷을 다른 패킷 분석 프로그램에서 사용할 수 있게 하는 방법으로 내보내기 기능을 제공한다. 파일 메뉴 - 패킷 분해 결과 내보내기 버튼을 사용해 다양한 포맷(.txt, .csv, .c)으로 패킷을 내보낼 수 있다.
+
+### 병합
+현재 패킷 리스트에 패킷이 존재하는 경우, 다른 패킷 캡처 파일을 불러와서 병합할 수 있다. 현재 리스트에 다른 파일을 가져와서 앞쪽에 붙이는 `prepend 방식`, 뒤쪽에 붙이는 `append 방식`, 타임스탬프(시간) 기준 날짜순으로 병합하는 `chronologically 방식` 이 있다.
+
+## 패킷 검색
+특정 기준이나 문자열 비교를 통해 원하는 패킷을 찾으려면 `Ctrl + F` 를 통해 검색바를 출력해서 사용이 가능하다.
+
+검색바에서는 먼저 메인 창 3개의 영역 중 검색을 진행할 영역을 선택할 수 있고, 값을 검색할 때 어떤 기준(문자열, 16진수값, 표시 필터, 정규 표현식)으로 검색할 것인지 선택이 가능하다.
+
+## 필터
+### 캡처 필터
+대용량 트래픽에서 모든 패킷을 캡처하기 보단 사용자 지정 캡처 필터를 통해 원하는 패킷만 캡처하는 것이 성능적으로 좋을 수 있다.
+
+간단한 예시로 여러 역할을 가진 서버에서 특정 서비스가 실행중인 포트의 트래픽만 캡처하고 싶은 경우 특정 포트를 캡처 필터에 설정하면 된다.
+
+필터의 목록을 보거나 새로운 필터를 만들기 위해서는 `캡처 - 캡처 필터` 메뉴로 들어가면 된다.
