update css - change img border to shadow
update post
- update packet sniffing ch2

--- a/_posts/2024-02-16-패킷-스니핑-알아보기-2장-wireshark-사용하기.md
+++ b/_posts/2024-02-16-패킷-스니핑-알아보기-2장-wireshark-사용하기.md
@@ -69,3 +69,37 @@ Packet Bytes
 간단한 예시로 여러 역할을 가진 서버에서 특정 서비스가 실행중인 포트의 트래픽만 캡처하고 싶은 경우 특정 포트를 캡처 필터에 설정하면 된다.
 
 필터의 목록을 보거나 새로운 필터를 만들기 위해서는 `캡처 - 캡처 필터` 메뉴로 들어가면 된다.
+
+필터를 설정할 때 BPF(Berkeley Packet Filter) 구문을 사용한다. BPF 구문을 이용해 만들어진 필터를 표현식(expression)이라 부르고, 이 표현식은 하나 이상의 primitives 로 이루어져있다.
+
+![bpf syntax](/assets/img/captures/4_bpf_syntax.png){: width='400' .normal }
+
+위의 예시를 살펴보자. 첫번째 프리미티브로 목적지 호스트의 주소가 192.168.0.10 인 패킷만 필터링 하고, `&&` 연산자를 이용해 동시에 두번째 프리미티브로 tcp 프로토콜이면서 포트번호 80번을 사용하는 패킷들을 필터링한다. 따라서 두 프리미티브를 모두 만족하는 패킷만 캡처가 될 것이다.
+
+#### 한정자(Qualifier)의 종류와 예시
+
+|한정자|설명|예제|
+|:--|:--|:--|
+|Type|어떤 ID 나 숫자를 사용하는건지 식별해준다.|host, net, port|
+|Dir|ID 나 숫자의 전송 방향을 지정한다.|src, dst|
+|Proto|특정 프로토콜로 제한한다.|ether, ip, tcp, udp, http, ftp|
+
+host 한정자를 통해, 여러 ID(MAC 주소, IPv4 주소, IPv6 주소, DNS 호스트명)를 기준으로 필터링할 수 있다.
+
+|ID|예시|
+|:--|:--|
+|IPv4|host 192.168.0.1|
+|IPv6|host 2001:DB8:1000::1111:2222|
+|호스트명|host testserver|
+|MAC|ether host 00-1a-a0-52-e2-a0|
+
+프로토콜 필터링 시 `!`를 앞에 붙이면 해당 프로토콜을 제외한 필터가 된다. ex) `!ip6`
+
+### 디스플레이 필터
+캡처 필터와는 다르게 필터가 적용되지 않은 나머지 패킷을 출력에서만 제외하고 삭제하지 않는다. 필터 표현식을 제거하면 원래의 패킷 리스트로 돌아간다.
+
+예를들어 ARP 브로드캐스트 트래픽을 일시적으로 제외하고 싶은 경우, 캡처 필터보다는 디스플레이 필터를 이용해 일시적으로 필터링한 후에 나중에 필터 표현식을 제거하면 브로드캐스트 트래픽도 분석이 가능하다.(`!arp`)
+
+디스플레이 필터 표현식에 대해서 더 자세한 설정방법이 궁금하다면 `분석 - 표시 필터 표현식` 메뉴에서 확인이 가능하다.
+
+또 `분석- 표시 필터` 메뉴에 원하는 디스플레이 필터 표현식을 만들고 저장해둘 수 있다.
