update post - https setting after 3 month
new post
- github project code analysis

new image
- emoji

--- a/_posts/2023-11-16-사이드-프로젝트-서버-https-설정하기.md
+++ b/_posts/2023-11-16-사이드-프로젝트-서버-https-설정하기.md
@@ -109,6 +109,14 @@ Certbot이 발급한 인증서의 유효기간은 3개월이다.
 
 crontab[^fn3]에 스크립트를 추가해서 자동 갱신을 해보자.
 
+crontab 의 기본 문법은 다음과 같다.
+
+```txt
+minute(0-59) hour(0-23) day(1-31) month(1-12) weekday(0=Sunday - 6=Saturday) command(shell command)
+```
+
+이에 따라 아래와 같이 명령어를 등록했다.
+
 ```bash
 0 3 1 * * root certbot renew --quiet --no-self-upgrade --pre-hook "service nginx stop" --post-hook "service nginx start"
 ```
@@ -139,6 +147,22 @@ crontab 등록 확인은 `crontab -l` 명령어로 가능하다.
 - <https://developer.mozilla.org/ko/docs/Glossary/TLS>
 - <https://yeongchan1228.tistory.com/137>
 - <https://ko.wikipedia.org/wiki/Cron>
+
+---
+
+## 후기
+어느날 갑자기 프로젝트 사이트가 접근이 안된다... 브라우저상 뜨는 메세지를 보니 `이 사이트는 보안 연결(HTTPS)이 사용되지 않았습니다.` 라고 뜬다.
+
+혹시 https 인증서 재발급이 제대로 안됐나 왜이럴까 이런저런 고민하던 중 설마해서 이 포스트를 다시 확인해보았다.
+
+이 포스트를 다시 확인해보니 11월 16일날 업로드된 포스트.. 아마 이때쯤 서버 업데이트도 동시에 진행했을 것이다. 그렇다고 치면 사이트 접근이 막히고 좀 방관하다가(ㅎㅎ;) 다시 포스트를 확인한 날짜가 2월 22일. 3개월이 지난 상태이다. 위에 정리한 crontab 주기를 보니 1개월 간격으로 설정해놓았다.
+
+잘 동작하고 있는지 확인하고 있는지 서버에 원격접속을 시도하는데 안되더라... aws 서버를 확인해보니 상태 검사 중 하나(인스턴스 연결성 검사)가 실패했네? 일단 접속을 못하니 인스턴스 재부팅을 하고나서 서버를 다시 켰다.
+
+재부팅 후 별 동작에 문제 없는거 보면 내가 생각했던 인증서 재발급 문제는 아닌 것 같고 인스턴스 문제가 맞나보다..
+
+물론 이 증상도 내가 해놓은 설정에서 비롯될 수도 있지않을까 생각이 들지만 그건 동일한 문제가 3개월 후에 또 발생하면 그때 확인해보자.(ㅎㅎ;)
+
 
 ---
 
