--- a/_posts/2024-03-05-com-이란-무엇인가.md
+++ b/_posts/2024-03-05-com-이란-무엇인가.md
@@ -27,12 +27,40 @@ COM 은 COM objects 의 필수 특성을 정의한다. 보편적으로 software 
 
 COM 은 기본적인 binary object standard 를 지정하는 것 외에도 특정 기본 interfaces 를 정의해서 모든 COM 기반 기술에 공통적으로 사용되는 function 을 제공하고 있으며, 모든 component 에서 사용되는 몇가지 function 들을 제공한다. 또 COM 은 분산된 환경에서 objects 들이 어떻게 같이 동작할 수 있는지를 정의하며, 시스템과 component 의 무결성을 위한 보안 기능들도 추가되어있다.
 
+## COM Technical Overview
+마이크로소프트의 COM 은 *binary interoperability*[^fn3] standard 을 정의하는데, 이는 런타임에 상호작용하는 reusable software libraries 를 만들기 위한 표준이다. 다시말해 COM libraries 들을 우리 어플리케이션에 컴파일할 필요없이 사용이 가능하다. COM은 Windows Media Player 와 Windows Server 같은 마이크로소프트 제품과 기술들의 기반이다.
+
+COM 은 많은 OS 와 하드웨어 플랫폼들에 적용되는 binary standard 를 정의한다. 네트워크 컴퓨팅에서는 standard wire format 과 다른 하드웨어 플랫폼에서 동작하는 object 간의 상호작용 프로토콜을 정의한다. COM 은 구현에 사용된 언어에 독립적이다. 다시말해 C++ 나 .NET Framework 의 다양한 언어들을 사용해 COM libraries 를 개발할 수 있다.
+
+COM specification(사양) 은 cross-platform software reuse 를 위한 기본 개념들을 아래와 같이 제공한다.
+- component 간의 functions 호출을 위한 binary standard
+- interface 내부 functions 의 strongly-typed groupings 에 대한 규정
+- polymorphism, feature discovery, object lifetime tracking 을 제공하는 기본 인터페이스
+- component 들과, component 들의 interfaces 를 고유 식별하는 메커니즘
+- component loader - deployment 에서 component instance 들을 생성해준다
+
+아래와 같이 COM 이 가지고있는 다양한 파츠들을 같이 사용해 reusable components 들로 이루어진 어플리케이션을 만들수 있다.
+- COM specification 에 따른 런타임 환경을 제공하는 host system
+- *feature contracts*[^fn4] 를 정의하는 interface, interface 를 구현하는 component
+- 시스템에 components 를 제공하는 servers, components 가 제공하는 기능을 사용하는 clients
+- local host, remote host 에서 components 가 deploy 된 위치를 기록하는 **registry**
+- local host, remote host 에서 components 의 위치를 찾아내고, servers 를 clients 에 연결하는 **Service Control Manager**
+- host 의 파일 시스템 안 파일 내용을 탐색하는 방법을 정의하는 **structured storage protocol**[^fn5]
+
+다양한 hosts 와 platforms(*소프트웨어가 실행되는 HW + OS 조합 - ex. Windows 플랫폼, Linux 플랫폼*) 전반에 걸쳐 코드의 재사용을 가능하게 만드는 것이 COM 의 핵심이다. 재사용 가능한 interface 구현체를 *component, component object, COM object* 라고 부른다. 이 component 는 하나 이상의 interface 를 구현한다.
+
+개발자는 자신의 library 가 구현하는 interface 를 디자인해서 custom COM library 를 만들 수 있다. 이렇게 만들어진 custom COM library 의 사용자는 library 의 deployment(*SW, library 를 사용가능하게 시스템에 설치, 구성하는것*) 나 자세한 구현에 대해 알 필요 없이 기능을 찾아서 사용할 수 있다.
+
 ---
 
 # 참조
 - <https://learn.microsoft.com/en-us/windows/win32/com/the-component-object-model>{: target='_blank' }
+- <https://learn.microsoft.com/en-us/windows/win32/com/com-technical-overview>{: target='_blank' }
 
 ---
 
-[^fn1]: 마이크로소프트에서 개발한 윈도우의 각종 응용 프로그램 사이에서 서로 데이터를 공유할 수 있는 기능. - [위키백과](https://ko.wikipedia.org/wiki/%EA%B0%9D%EC%B2%B4_%EC%97%B0%EA%B2%B0_%EC%82%BD%EC%9E%85){: target='_blank' }
-[^fn2]: 마이크로소프트에서 개발한 객체지향적 소프트웨어 구성요소 개발에 사용되는 기술이다. COM 과 OLE 를 결합한 기술로 WWW 에서 다운로드한 컨텐츠들을 이용하는데 사용된다. - [위키백과](https://ko.wikipedia.org/wiki/%EC%95%A1%ED%8B%B0%EB%B8%8CX){: target='_blank' }
+[^fn1]: 마이크로소프트에서 개발한 윈도우의 각종 응용 프로그램 사이에서 서로 데이터를 공유할 수 있는 기능.<br>- [위키백과](https://ko.wikipedia.org/wiki/%EA%B0%9D%EC%B2%B4_%EC%97%B0%EA%B2%B0_%EC%82%BD%EC%9E%85){: target='_blank' }
+[^fn2]: 마이크로소프트에서 개발한 객체지향적 소프트웨어 구성요소 개발에 사용되는 기술이다. COM 과 OLE 를 결합한 기술로 WWW 에서 다운로드한 컨텐츠들을 이용하는데 사용된다.<br>- [위키백과](https://ko.wikipedia.org/wiki/%EC%95%A1%ED%8B%B0%EB%B8%8CX){: target='_blank' }
+[^fn3]: binary interoperability(≒ compatibility). 어떤 컴퓨터 시스템(machine)에서 만든 소프트웨어의 executable code(대부분 CPU를 조작하는 machine code: **2진 컴퓨터가 지배적인 현대 시장에서 machine code 는 컴퓨터가 프로그램을 실제로 읽고 해석하기 위한 2진 표현법이다**) 를 바꾸거나 recompile 하지 않고도 다른 시스템에서 실행할 수 있는 능력을 말한다. 예를들어 레노버의 Thinkpad 노트북과 삼성 데스크탑이 binary compatibility 를 가진다면, 서로 다른 브랜드의 processors, motherboards, memory, graphics hardware, disk drives 를 가진다 해도 똑같이 실행할 수 있다.<br>- [위키백과](https://en.wikipedia.org/wiki/Binary-code_compatibility){: target='_blank' }, [computerworld.com](https://www.computerworld.com/article/2579386/binary-compatibility.html){: target='_blank' }
+[^fn4]: 소프트웨어 개발에서 특정 기능이나 서비스에 대한 규격이나 인터페이스. 특정 기능이나 서비스가 어떻게 동작해야 하는지, 어떤 메서드나 속성을 제공해야 하는지 등을 정의한다. 예를 들어, 여러 component 가 데이터베이스에 접근하는데 사용되는 feature contract 로서 데이터 CRUD 메서드, 연결 설정 메서드 등이 포함될 수 있다.<br>- ChatGPT(틀릴수도있음)
+[^fn5]: 파일 시스템이나 데이터 저장 공간에 구조적으로 데이터를 저장하고 접근하기 위한 규약이나 프로토콜. 데이터를 계층 구조 또는 특정 형식으로 저장하여 효율적으로 관리하고 검색할 수 있게 하는 방법이다. 일반적으로 파일의 메타데이터, 구조, 및 데이터 간의 상호 작용을 정의하며, 복잡한 데이터 구조를 효과적으로 저장하고 검색할 수 있도록 지원한다. 여러 응용 프로그램이 동일한 데이터에 접근하고 조작할 수 있도록 하며, 특히 데이터베이스나 문서 저장소와 같은 시스템에서 활용될 수 있다.<br>- ChatGPT(틀릴수도있음)
