--- a/_posts/2024-03-19-java-알고리즘-복습-1.md
+++ b/_posts/2024-03-19-java-알고리즘-복습-1.md
@@ -8,7 +8,9 @@ math: true
 ---
 
 # 서론
-이 포스트는 코딩 테스트를 위해 수강했던 알고리즘 강의 **한 번에 끝내는 코딩테스트 369 Java편 초격차 패키지 Online.** 를 복습하며 정리한 내용입니다.
+이 포스트는 코딩 테스트를 위해 수강했던 패스트캠퍼스의 알고리즘 강의 **한 번에 끝내는 코딩테스트 369 Java편 초격차 패키지 Online.** 의 류호석 강사의 강의를 복습하며 정리한 내용입니다.
+
+---
 
 ## 알고리즘
 문제를 해결하기 위한 **절차(방법)**이다.
@@ -16,6 +18,8 @@ math: true
 주어진 문제에 맞춰서 **입력**을 넣으면 원하는 **출력**을 얻을 수 있도록 해주는 프로그래밍이다.
 
 문제에 어떤 알고리즘을 사용하느냐에 따라 성능이 차이가 나기 때문에, 문제에 맞는 알고리즘을 사용해야 한다.
+
+---
 
 ### 알고리즘에 좋은 습관은?
 #### 문제를 올바른 순서로 이해하자
@@ -65,5 +69,69 @@ math: true
 |**중복 허용**|시간복잡도 : <br> $O(N^M) = 7^7 \approx 82$만 <br> 공간복잡도 : $O(M)$|시간복잡도 : <br> $O(N^M) = 8^8 \approx 1677$만 보다 작음 <br> 공간복잡도 : $O(M)$|
 |**중복 제외**|시간복잡도 : <br> $O({N \atop M}P) = O(\frac{N!}{(N-M)!})$ <br> $= \frac{8!}{0!} = 40,320$ <br> 공간복잡도 : $O(M)$|시간복잡도 : <br> $O({N \atop M}C) = O(\frac{N!}{M!(N-M)!})$ <br> $= \frac{8!}{4!4!} = 70$ <br> 공간복잡도 : $O(M)$|
 
+#### 응용 문제
+[BOJ 14888 - 연산자 끼워넣기](https://www.acmicpc.net/problem/14888){: target='_blank' }, [BOJ 9663 - N Queen.](https://www.acmicpc.net/problem/9663){: target='_blank' }, [BOJ 1182 - 부분수열의 합](https://www.acmicpc.net/problem/1182){: target='_blank' }
+
+**N Queen 에서의 팁**
+- 우상향, 우하향 대각선의 경우 행,열 좌표의 합과 차로 체크가능
+- 반복문은 행, 열 두가지가 아니라 하나에 대해서만 돌리면 됨.(어짜피 행이나 열 1개 당 무조건 1개의 퀸이 들어가기 때문)
+
+**부분수열의 합 에서의 팁**
+- 전체 수열에서 각 요소를 사용/미사용 선택하는 문제이기 때문에, 전체 경우의 수는 $2^N$개 이다.
+
+---
+
+### 정렬 응용법(Sort Application)
+정렬이란 주어진 특정 기준에 맞춰서 요소들을 나열하는 것을 뜻한다.
+
+이러한 정렬 문제를 풀기 위해서는 몇가지 조건이 필요한데, 아래의 내용을 참조하자.
+
+#### 정렬 조건 설정
+JAVA 에서는 정렬을 위한 기준을 `Comparable<T>` 인터페이스를 통해서 구현할 수 있다.
+
+자세한 내용은 아래의 소스코드를 참조해보자.
+
+```java
+static class Element implements Comparable<Element> {
+    public int value;
+
+    @Override
+    public int compareTo(Element other){
+        return value - other.value;
+    }
+}
+```
+
+내부의 `compareTo` 메서드를 구현해야 하는데, 메서드에서 사용하는 매개변수는 **현재 원소와 비교가 될 다른 원소**이며, return 값이 **음수**이면 현재 원소가 우선, **양수**이면 다른 원소가 우선, **0**이면 동일한 기준값이라고 판단하여 정렬한다.
+
+#### 시간 복잡도
+복잡하게 들어가지 않고, JAVA의 기본 정렬을 사용하는 입장에서는 N개의 원소를 정렬하기 위해 $O(N\log_2{N})$ 의 시간 복잡도를 갖는다고 알면 된다.(Ex. 10만개 원소 정렬은 160만 정도의 시간복잡도)
+
+JAVA의 기본 정렬 `Arrays.sort(arr)` 에서 Primitive 원소와 Object 원소의 정렬에 차이점이 있는데, 아래 표를 참조하자.
+
+|Primitive 원소|Object 원소|
+|:--|:--|
+|Dual-Pivot Quick Sort<br>*`(In-place Sort)`*|Tim Sort<br>*`(Stable Sort)`*|
+|최소 $O(N)$|최소 $O(N)$|
+|최대 $O(N^2)$|최대 $O(N\log_2{N})$|
+|평균 $O(N\log_2{N})$|평균 $O(N\log_2{N})$|
+
+위에서 언급된 In-place, Stable 의 기준은 아래와 같다.
+
+In-place
+: 원소의 개수가 N개 일 때, 정렬 과정에서 무시해도 될만큼의 메모리만 추가로 사용한다(Ex. 10만개의 원소 정렬에 10개정도 메모리만 더 추가로 사용한다.)
+
+Stable
+: 정렬 기준으로 봤을 때 동등한 위상을 가진 원소들의 원래 순서 관계가 보존이 된다.
+
+#### 정렬의 특성
+정렬을 적용한 후에 아래와 같은 특성을 가진다.
+
+- 같은 정보들은 인접해있다.
+- 각 원소에 가장 가까운 원소는 양 옆의 원소 중 하나이다.
+
 #### 예시 문제
-[BOJ 14888](https://www.acmicpc.net/problem/14888){: target='_blank' }, [BOJ 9663](https://www.acmicpc.net/problem/9663){: target='_blank' }
+[BOJ 10825 - 국영수](https://www.acmicpc.net/problem/10825){: target='_blank' }
+
+#### 응용 문제
+[BOJ 1015 - 수열 정렬](https://www.acmicpc.net/problem/1015){: target='_blank' }, [BOJ 11652 - 카드](https://www.acmicpc.net/problem/11652){: target='_blank' }, [BOJ 20291 - 파일 정리](https://www.acmicpc.net/problem/20291){: target='_blank' }, [BOJ 15970 - 화살표 그리기](https://www.acmicpc.net/problem/15970){: target='_blank' }
