--- a/_posts/2024-03-19-java-알고리즘-복습-1.md
+++ b/_posts/2024-03-19-java-알고리즘-복습-1.md
@@ -134,4 +134,41 @@ Stable
 [BOJ 10825 - 국영수](https://www.acmicpc.net/problem/10825){: target='_blank' }
 
 #### 응용 문제
-[BOJ 1015 - 수열 정렬](https://www.acmicpc.net/problem/1015){: target='_blank' }, [BOJ 11652 - 카드](https://www.acmicpc.net/problem/11652){: target='_blank' }, [BOJ 20291 - 파일 정리](https://www.acmicpc.net/problem/20291){: target='_blank' }, [BOJ 15970 - 화살표 그리기](https://www.acmicpc.net/problem/15970){: target='_blank' }
+[BOJ 1015 - 수열 정렬](https://www.acmicpc.net/problem/1015){: target='_blank' }, [BOJ 11652 - 카드](https://www.acmicpc.net/problem/11652){: target='_blank' }, [BOJ 20291 - 파일 정리](https://www.acmicpc.net/problem/20291){: target='_blank' }, [BOJ 15970 - 화살표 그리기](https://www.acmicpc.net/problem/15970){: target='_blank' }(이건 내 풀이가 좀 더 나은듯?)
+
+---
+
+### 탐색 - 이분 탐색(Binary Search)
+수열에서 하는 탐색이란?
+
+어떤 수열과 탐색값(혹은 범위)이 주어진다고 가정하자.
+이 때 해당 탐색값이 존재하는지, 탐색범위안의 원소는 몇개인지, 탐색값과 가장 가까운 원소는 무엇인지 등을 찾는 행위이다.
+
+여기서 만약 **탐색대상인 수열이 정렬이 되어있는 상태** 라면?
+
+**이분 탐색**을 사용해 더 빠른 탐색이 가능하다!
+
+#### 이분 탐색이란?
+**정렬이 보장된 배열** 에서, 탐색값 X 를 가지고 범위를 **"이분"** 하면서 탐색하는 방법이다.
+
+단순히 값을 찾아내는 개념이 아니라, 찾아낸 값을 기준으로 조건을 만족하는 데이터가 얼마나 되는지(Ex. 찾은 값보다 큰 개수 등) 찾아내는 방법으로도 사용된다. 완전 탐색으로는 너무 오래 걸리는 경우 효율적으로 사용될 수 있다.
+
+한번 이분할때마다 수열의 크기가 반씩 줄어들기 때문에 시간 복잡도는 $O(\log_2{N})$ 이다.
+
+수열의 이분탐색의 간단한 예시를 아래 그림을 통해 살펴보자.
+
+![binary search](/assets/img/captures/1_binarysearch.png){: width='500' .normal }
+
+![binary search](/assets/img/captures/2_binarysearch.png){: width='500' .normal }
+
+![binary search](/assets/img/captures/3_binarysearch.png){: width='500' .normal }
+
+이런식으로 탐색 범위를 절반씩 좁혀나간다. 물론 위처럼 정확히 같은값을 찾는게 아니라 가장 가까운 값을 찾는 경우도 있다. 이런 경우는 L 이 R 보다 더 커지는 경우에 탐색을 종료하는 식으로 짜면 된다.
+
+이러한 이분탐색의 사용이 익숙해지게 되면, 정렬을 깜빡하고 탐색을 시작하는 경우가 생기니 조심하자.
+
+#### 예시 문제
+[BOJ 7795 - 먹을 것인가 먹힐 것인가](https://www.acmicpc.net/problem/7795){: target='_blank' }, [BOJ 2470 - 두 용액](https://www.acmicpc.net/problem/2470){: target='_blank' }
+
+#### 연습 문제
+[BOJ 1920 - 수 찾기](https://www.acmicpc.net/problem/1920){: target='_blank' }, [BOJ 1764 - 듣보잡](https://www.acmicpc.net/problem/1764){: target='_blank' }, [BOJ 3273 - 두 수의 합](https://www.acmicpc.net/problem/3273){: target='_blank' }, [BOJ 10816 - 숫자 카드 2](https://www.acmicpc.net/problem/10816){: target='_blank' }
