--- a/_posts/2024-03-19-java-알고리즘-복습-1.md
+++ b/_posts/2024-03-19-java-알고리즘-복습-1.md
@@ -167,8 +167,59 @@ Stable
 
 이러한 이분탐색의 사용이 익숙해지게 되면, 정렬을 깜빡하고 탐색을 시작하는 경우가 생기니 조심하자.
 
+**이분탐색은 정형화된 코드를 많이 사용하므로, 본인이 직접 짜보고 익히는게 중요하다.**
+
 #### 예시 문제
-[BOJ 7795 - 먹을 것인가 먹힐 것인가](https://www.acmicpc.net/problem/7795){: target='_blank' }, [BOJ 2470 - 두 용액](https://www.acmicpc.net/problem/2470){: target='_blank' }
+[BOJ 7795 - 먹을 것인가 먹힐 것인가](https://www.acmicpc.net/problem/7795){: target='_blank' }, [BOJ 2470 - 두 용액](https://www.acmicpc.net/problem/2470){: target='_blank' }, [BOJ 2470 - 두 용액](https://www.acmicpc.net/problem/2470){: target='_blank' }
 
 #### 연습 문제
 [BOJ 1920 - 수 찾기](https://www.acmicpc.net/problem/1920){: target='_blank' }, [BOJ 1764 - 듣보잡](https://www.acmicpc.net/problem/1764){: target='_blank' }, [BOJ 3273 - 두 수의 합](https://www.acmicpc.net/problem/3273){: target='_blank' }, [BOJ 10816 - 숫자 카드 2](https://www.acmicpc.net/problem/10816){: target='_blank' }
+
+### 매개변수 탐색(Parametric Search)
+이분탐색의 아이디어를 참조한 알고리즘이다.
+
+예를들어, 0과 1로만 구성된 길이 1000개의 오름차순 배열이 있다고 가정했을 때, 0 과 1 의 경계가 어디인지 찾는 경우가 있다.
+
+이 경우, **0 과 1 을 구분하는 작업에 걸리는 시간**이 $T$ 라고 가정하면, **시간 복잡도**는 $T\log_2{N}$ 이 된다.
+
+이러한 매개변수 탐색의 핵심은 다음과 같다.
+
+1. 정답을 매개변수화 하고 Yes/No 문제로 바꿔서 보기
+2. 모든 값에 대해 Yes/No 를 채웠을 때, 정렬된 상태인지 보기(Yes 쭉 가다가 No 쭉 나와야 함. Yes / No 가 중간중간 섞이면 안됨)
+3. Yes/No 결정하는 문제를 풀기
+
+위에 언급한 대로 Yes, No 가 정렬되기 않은 문제인제 이분 탐색을 하는 실수가 많이 나온다.
+
+이러한 문제들의 공통적인 키워드는 `~ 의 최대값을 구하시오`, `~ 의 최소값을 구하시오` 가 자주 등장하며, 이런 키워드를 보면 매개변수 탐색을 시도해볼 가치가 있다.
+
+#### 연습문제
+- [BOJ 2805 - 나무 자르기](https://www.acmicpc.net/problem/2805){: target='_blank' }, [BOJ 1654 - 랜선 자르기](https://www.acmicpc.net/problem/1654){: target='_blank' }, [BOJ 2512 - 예산](https://www.acmicpc.net/problem/2512){: target='_blank' }
+- [BOJ 2110 - 공유기 설치](https://www.acmicpc.net/problem/2110){: target='_blank' }, [BOJ 2343 - 기타 레슨](https://www.acmicpc.net/problem/2343){: target='_blank' }, [BOJ 6236 - 용돈 관리](https://www.acmicpc.net/problem/6236){: target='_blank' }, [BOJ 13702 - 이상한 술집](https://www.acmicpc.net/problem/13702){: target='_blank' }, [BOJ 17266 - 어두운 굴다리](https://www.acmicpc.net/problem/17266){: target='_blank' }
+- 고난이도 : [BOJ 1300 - K 번째 수](https://www.acmicpc.net/problem/1300){: target='_blank' }, [BOJ 1637 - 날카로운 눈](https://www.acmicpc.net/problem/1637){: target='_blank' }
+
+---
+
+### 투 포인터(Two Pointers)
+문제를 풀 때 정답을 찾기위해 불필요한 부분들을 제외하는 것은 효율적으로 볼 때 필수적인 과정이다.
+
+예를들어 위의 탐색 알고리즘에 사용한 기준점 L, R은 탐색범위를 반씩 좁혀가면서 불필요한 부분을 전체의 반씩 제외하는 과정을 거친다.
+
+**투 포인터** 에서는 이 기준점 두 개에 의미를 부여해서 탐색 범위를 압축한다.
+
+예를들면 아래와 같은 경우들이 있다.
+
+**1차원 배열에서 2개의 포인터를 만드는 경우**
+- 2개의 포인터가 모두 **왼쪽에서 시작해 같은 방향으로 이동** 하는 경우.
+- 2개의 포인터가 **양쪽 끝에서 시작해 서로를 향해 이동** 하는 경우
+
+**문제에서 배열이라고 나오진 않지만 관찰을 통해 문제의 변수 2개의 값을 두 포인터로 표현하는 경우**
+
+이러한 투 포인터 알고리즘도 공통적으로 등장하는 키워드가 있다.
+
+- 1차원 배열에서의 **"연속 부분 수열"** / **"순서를 지키며 차례대로"**
+- **곱의 최소**(Ex. A, B 의 곱의 최소를 찾을 때, A 가 커지면 B 가 작아져야 한다.)
+
+위와 같은 키워드가 등장하면 투 포인터 접근을 해볼만한 가치가 있다.
+
+#### 연습 문제
+[BOJ 1806 - 부분합](https://www.acmicpc.net/problem/1806){: target='_blank' }
