--- a/_posts/2024-03-19-java-알고리즘-복습-1.md
+++ b/_posts/2024-03-19-java-알고리즘-복습-1.md
@@ -190,6 +190,7 @@ Stable
 
 위에 언급한 대로 Yes, No 가 정렬되기 않은 문제인제 이분 탐색을 하는 실수가 많이 나온다.
 
+#### 키워드
 이러한 문제들의 공통적인 키워드는 `~ 의 최대값을 구하시오`, `~ 의 최소값을 구하시오` 가 자주 등장하며, 이런 키워드를 보면 매개변수 탐색을 시도해볼 가치가 있다.
 
 #### 연습문제
@@ -214,6 +215,7 @@ Stable
 
 **문제에서 배열이라고 나오진 않지만 관찰을 통해 문제의 변수 2개의 값을 두 포인터로 표현하는 경우**
 
+#### 키워드
 이러한 투 포인터 알고리즘도 공통적으로 등장하는 키워드가 있다.
 
 - 1차원 배열에서의 **"연속 부분 수열"** / **"순서를 지키며 차례대로"**
@@ -222,4 +224,121 @@ Stable
 위와 같은 키워드가 등장하면 투 포인터 접근을 해볼만한 가치가 있다.
 
 #### 연습 문제
-[BOJ 1806 - 부분합](https://www.acmicpc.net/problem/1806){: target='_blank' }
+- [BOJ 1806 - 부분합](https://www.acmicpc.net/problem/1806){: target='_blank' }, [BOJ 2003 - 수들의 합2](https://www.acmicpc.net/problem/2003){: target='_blank' }, [BOJ 2559 - 수열](https://www.acmicpc.net/problem/2559){: target='_blank' }, [BOJ 15565 - 귀여운 라이언](https://www.acmicpc.net/problem/15565){: target='_blank' }, [BOJ 11728 - 배열 합치기](https://www.acmicpc.net/problem/11728){: target='_blank' }, [BOJ 2230 - 수 고르기](https://www.acmicpc.net/problem/2230){: target='_blank' }
+- [BOJ 2470 - 두 용액](https://www.acmicpc.net/problem/2470){: target='_blank' }, [BOJ 3273 - 두 수의 합](https://www.acmicpc.net/problem/3273){: target='_blank' }
+
+#### 응용 문제
+- [BOJ 13144 - List of Unique Numbers](https://www.acmicpc.net/problem/13144){: target='_blank' }, [BOJ 1253 - 좋다](https://www.acmicpc.net/problem/1253){: target='_blank' }, [BOJ 2473 - 세 용액](https://www.acmicpc.net/problem/2473){: target='_blank' }
+- [BOJ 16472 - 고냥이](https://www.acmicpc.net/problem/16472){: target='_blank' }
+
+---
+
+### 그래프(Graph)
+**자료구조에서 그래프란?**
+
+![graph](/assets/img/captures/4_graph.png){: width='450' .normal }
+
+정점들을 잇는 **간선의 종류는 2가지**가 있다.
+
+![graph](/assets/img/captures/5_graph.png){: width='600' .normal }
+
+각 간선에는 **가중치(Weight)** 가 존재할 수 있다.
+
+![graph](/assets/img/captures/6_graph.png){: width='300' .normal }
+
+**차수(Degree)** 는 정점에 연결된 간선의 수를 뜻한다.
+
+![graph](/assets/img/captures/7_graph.png){: width='300' .normal }
+
+#### 저장 방법
+그렇다면 그래프는 컴퓨터에서 어떤 형태로 저장해서 사용할까?
+
+대표적으로 두 가지 방법이 있다.
+
+##### 1. 인접 행렬(Adjacency Matrix)
+![graph](/assets/img/captures/8_graph.png){: width='600' .normal }
+- `int[][] adj = int new[V][V];` 형태로 구현한다.
+- 인접행렬을 만드는데 $O(V^2)$ 만큼의 공간이 필요하다. 이는 정점이 많아질수록 어마어마한 공간을 필요로 한다는 뜻이다.
+- 모든 간선의 방향과 가중치가 행렬에 있기 때문에, 이동 가능 여부와 가중치 파악에는 $O(1)$ 의 시간복잡도를 가진다.
+- 한 정점에서 갈 수 있는 정점들을 알기 위해서는 해당 행을 모두 봐야 하기 때문에 $O(V)$ 의 시간복잡도를 가진다.
+
+##### 2. 인접 리스트(Adjacency List)
+![graph](/assets/img/captures/9_graph.png){: width='600' .normal }
+- `ArrayList<Integer>[] adj;` 형태로 구현한다.
+- $O(E)$ 만큼의 공간이 필요하다.(차수 만큼의 공간이 필요하며, 이는 2E 이나 상수항은 생략) 이는 인접 행렬에 비해 훨씬 효율적이다.
+- 이동 가능 여부와 가중치 파악에는 무방향이 $O(min(deg(A), deg(B)))$, 방햐이 $O(deg(A))$ 의 시간복잡도를 가진다.
+- 한 정점 A 에서 갈 수 있는 정점들을 알기 위해서는 $O(deg(A))$ 시간복잡도를 가진다.
+
+#### 탐색
+한 시작점에서 간선을 자유롭게 사용해서 갈 수 있는 정점들은 무엇일까?
+
+이를 찾는데는 2가지 방식이 있다.
+
+##### 1. 깊이 우선 탐색(DFS: Depth First Search)
+아래와 같은 코드 형태를 가진다.
+
+```java
+// x 로 갈 수 있는 걸 알고 방문한 상태
+static void dfs(int x){
+    // x 위치 visit 표시
+    visit[x] = true;
+
+    // x 에서 갈 수 있는 모든 곳 방문
+    for(int y : x에서갈수있는점들){
+        // 이미 방문한 경우 생략
+        if(visit[y]) continue;
+
+        // 같은 작업을 y에서도 실행
+        dfs(y);
+    }
+}
+
+main(){
+    dfs(5);
+}
+```
+
+위처럼 코드를 작성한 경우, dfs의 시간 복잡도는 내부의 for문을 보면 알 수 있다.
+
+- 인접 행렬의 경우, $O(V^2)$
+- 인접 리스트의 경우, $O(deg(1) + deg(2) + ... + deg(V)) = O(E)$
+
+##### 2. 너비 우선 탐색(BFS: Breadth First Search)
+큐(Queue) 자료구조를 활용하며, 아래와 같은 코드 형태를 가진다.
+
+```java
+// 시작점 start 부터 갈 수 있는 정점들 모두 탐색
+static void bfs(int start){
+    Queue<Integer> queue = new LinkedList<>();
+
+    // 맨 처음 방문할 start 부터 queue 에 넣는다.
+    queue.add(start);
+    visit[start] = true;
+
+    while(!queue.isEmpty()){ // 확인할 점이 없을 때 까지 탐색
+        int x = que.poll();
+
+        for(int y : x에서갈수있는점들){
+            // 이미 방문한 경우 생략
+            if(visit[y]) continue;
+
+            // 갈 수 있으면 queue 에 추가 후 visit 표시
+            queue.add(y);
+            visit[y] = true;
+        }
+    }
+}
+```
+
+위처럼 코드를 작성한 경우, bfs의 시간 복잡도는 아래와 같다.
+
+- 인접 행렬의 경우, $O(V^2)$ : `int x = que.poll();` 에서 V 만큼, `for(int y : x에서갈수있는점들){` 에서 V 만큼 반복
+- 인접 리스트의 경우, $O(deg(1) + deg(2) + ... + deg(V)) = O(E)$
+
+주의할점은 꼭 visit 체크를 하는 올바른 시점은 queue 에 add 되는 시점이라는 것이다.
+
+#### 예시 문제
+- [BOJ 1260 - DFS와 BFS](https://www.acmicpc.net/problem/1260){: target='_blank' }
+
+#### 응용 문제
+- [BOJ 2667 - 단지번호 붙이기](https://www.acmicpc.net/problem/2667){: target='_blank' }
