--- a/_posts/2024-03-27-java-알고리즘-복습-2.md
+++ b/_posts/2024-03-27-java-알고리즘-복습-2.md
@@ -137,4 +137,6 @@ static void bfs(int start){
 이런 방식을 활용하는 문제에서 자주 등장하는 키워드는 **"최소 이동 횟수"**, **"최단 시간"** 등이 있다.
 
 ##### 예시 문제
-- [BOJ 2178 - 미로 탐색](https://www.acmicpc.net/problem/2178){: target='_blank' }
+- [BOJ 2178 - 미로 탐색](https://www.acmicpc.net/problem/2178){: target='_blank' }, [BOJ 7562 - 나이트의 이동](https://www.acmicpc.net/problem/7562){: target='_blank' }, [BOJ 2644 - 촌수 계산](https://www.acmicpc.net/problem/2644){: target='_blank' }, [BOJ 18404 - 현명한 나이트](https://www.acmicpc.net/problem/18404){: target='_blank' }
+- [BOJ 1697 - 숨바꼭질](https://www.acmicpc.net/problem/1697){: target='_blank' }, [BOJ 1389 - 케빈 베이컨의 6단계 법칙](https://www.acmicpc.net/problem/1389){: target='_blank' }, [BOJ 5567 - 결혼식](https://www.acmicpc.net/problem/5567){: target='_blank' }
+- [BOJ 3055 - 탈출](https://www.acmicpc.net/problem/3055){: target='_blank' }
